# AgentReliabilityBench

./: .gitignore  README.md  REPRODUCE.md  pyproject.toml  requirements-llm.txt  requirements.txt
arb/: __init__.py  schemas.py
arb/agents/: __init__.py  api_stub.py  base.py  local_hf.py  scripted.py  tool_hf.py
arb/code/: __init__.py  action_parser.py  blocked.py  build.py  download.py  environment.py  exploit_detect.py  harness.py  impossible_no_exploit.py  impossible_utils.py  impossible_with_exploit.py  metrics.py  solvable.py  spec_parser.py  workspace.py
arb/gui/: __init__.py  action_parser.py  blocked.py  build.py  download.py  environment.py  evaluator.py  exploit_detect.py  failure_report.py  impossible_no_exploit.py  impossible_with_exploit.py  metrics.py  model_output.py  path_utils.py  prompts.py  resource_parser.py  sim_spec_enrich.py  solvable.py  validation.py  workflow_hints.py  workspace.py
arb/scripts/: build_code_benchmark.py  build_gui_benchmark.py  build_text_benchmark.py  build_tool_benchmark.py  download_gsm8k.py  download_livecodebench.py  download_osworld.py  download_taubench.py  run_code_eval.py  run_gui_eval.py  run_model_full_code_eval.py  run_model_full_eval.py  run_model_full_gui_eval.py  run_model_full_tool_eval.py  run_text_eval.py  run_tool_eval.py  validate_gui_benchmark.py
arb/text/: __init__.py  blocked.py  build.py  (+8 more)
config/: default.yaml
scripts/: export_paper_summary.py  setup_env.sh
tests/: test_code_generation.py  test_exploit_detection.py  test_gsm8k_scoring.py  test_gui_generation.py  test_text_generation.py  test_tool_generation.py
writing/: outline.md
(+93 files in other folders)
